--- a/R/msa.Rmd
+++ b/R/msa.Rmd
@@ -9,18 +9,49 @@ library("ITHIM")
 ```
 ## List of Population Size Matrices
 
-```{r msamsa, eval = TRUE, echo = TRUE, warning = FALSE, error = FALSE, message = FALSE}
+```{r msamsa, eval = FALSE, echo = TRUE, warning = FALSE, error = FALSE, message = FALSE}
 msaIDFile <- read.csv(system.file("join2.csv", package = "ITHIM"), stringsAsFactors = FALSE)
 msaIDs <- msaIDFile$msaNHTS %>% unique
 msaIDs <- msaIDs[!is.na(msaIDs)] %>% as.list
 names(msaIDs) <- msaIDs
-populationList <- getPopulation(msaIDs)
+FList <- getPopulation(msaIDs)
 
-length(populationList)
-names(populationList)
-head(populationList, 3)
+length(FList)
+names(FList)
+head(FList, 3)
 
-saveRDS(populationList, file = "~/GHI/R/data/populationList.rds")
+saveRDS(FList, file = "~/GHI/R/data/FList.rds")
+```
+
+```{r msamsa2, eval = TRUE, echo = TRUE, warning = FALSE, error = FALSE, message = FALSE}
+NHTS.df <- readRDS(file = "~/GHI/R/data/NHTS.df.rds")
+FList <- readRDS(file = "~/GHI/R/data/FList.rds")
+
+formatMeanMatrix <- function(meanTable){
+    meanMatrix <- meanTable %>% select(age,sex,mean) %>% ungroup() %>% spread(sex,mean) %>% select(M,F) %>% as.matrix()
+    row.names(meanMatrix) <- paste0("ageClass",1:8)
+    return(meanMatrix)
+}
+
+#msaIDs <- unique(NHTS.df$location)
+#msaIDs <- as.character(msaIDs[msaIDs!="-1"])
+
+sampleSize <- NHTS.df %>% group_by(location,sex,age) %>% summarise(n=n_distinct(id))
+tripDuration <- NHTS.df %>% group_by(location,mode,sex,age) %>% summarise(total=sum(duration))
+foo <- right_join(sampleSize,tripDuration, by = c("location","sex","age")) %>% ungroup() %>% mutate(mean = total/n*7) %>% select(location,mode,sex,age,mean) %>% complete(location,mode,sex,age)
+
+meanByLocationByMode <- lapply(split(foo,foo$mode), function(x) split(x, x$location))
+
+MwtList <- lapply(meanByLocationByMode$walk, formatMeanMatrix)
+MctList <- lapply(meanByLocationByMode$cycle, formatMeanMatrix)
+RwtList <- lapply(MwtList, function(x) x/x[3,2])
+RctList <- lapply(MctList, function(x) x/x[3,2])
+
+meanWalkList <- mapply(function(x,y) sum(x*y/sum(y), na.rm = TRUE), MwtList[msaIDs], FList[msaIDs], SIMPLIFY = FALSE)
+meanCycleList <- mapply(function(x,y) sum(x*y/sum(y), na.rm = TRUE), MctList[msaIDs], FList[msaIDs], SIMPLIFY = FALSE)
+
+cbind(data.frame(walk = unlist(meanWalkList)), data.frame(cycle = unlist(meanCycleList)))
+
 ```
 
 ## Top Three MSAs
@@ -28,7 +59,7 @@ saveRDS(populationList, file = "~/GHI/R/data/populationList.rds")
 Let's inspect the top three MSAs by population size.
 
 ```{r msa2, eval = TRUE, echo = TRUE, warning = FALSE, error = FALSE, message = FALSE}
-totalPop <- lapply(populationList,sum) %>% unlist
+totalPop <- lapply(FList,sum) %>% unlist
 totalPop[totalPop %>% order(., decreasing = TRUE)] %>% head(., 3)
 msaIDFile %>% filter(msaNHTS %in% c(4472,5602,1602)) %>% select(msaName,msaNHTS) %>% unique
 ```
