Renamed methodsPaper ITHIM-manuscript

--- a/ITHIM-manuscript/lib/abstract.Rnw
+++ b/ITHIM-manuscript/lib/abstract.Rnw
@@ -1,3 +1,5 @@
+% !Rnw root = ../ITHIM-manuscript.Rnw
+% !TeX root = ../ITHIM-manuscript.Rnw
 Comparative risk assessments to quantify the health potential
 of active transportation, e.g., walking and cycling, have been
 performed in the United States on a limited basis. Current
