--- a/ITHIM-manuscript/lib/materialsAndMethods.Rnw
+++ b/ITHIM-manuscript/lib/materialsAndMethods.Rnw
@@ -1,3 +1,5 @@
+% !Rnw root = ../ITHIM-manuscript.Rnw
+% !TeX root = ../ITHIM-manuscript.Rnw
 As with the original ITHIM implementation we, employed a comparative
 risk assessment (CRA) across scenarios defined by mean active
 transportation time, i.e., combined walking and cycling.  To do so we
@@ -29,18 +31,6 @@ distribution in baseline and alternative scenarios, respectively.
 $\delta_j$ is the proportional burden for disease $j$ in the alternate
 scenario.
 
-\paragraph{Non-Travel-Related Physical Activity}
-
-\begin{equation}
-X_{ij}^{\mathrm{non-travel}} \sim \logNormalMath\left(\mu_{ij}, \gamma \mu_{ij}\right)
-\end{equation}
-
-Within each age-sex class the non-travel-related exposure is modeled
-with a \logNormal{} distribution.  The age-sex specific mean ratios,
-$r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
-American Time Use Survey data \cite{ATUS}.
-
-
 \paragraph{Travel-Related Physical Activity}
 
 The distribution for travel-related exposure is estimated from the
@@ -51,11 +41,20 @@ Travel-related exposure is estimated from active transport time using
 assumptions about how much physical activity is required for cycling
 and walking.
 
-
-
-%To estimate the disease burden we first approximate the population
-%attributable fraction through a discretization of the integral in
-%equation \ref{paf}.
+\begin{figure}\label{travelTime}
+<<results1, echo = FALSE, eval = TRUE, results = "hide", warning = FALSE, message = FALSE, fig.height = 3>>=
+p <- ITHIM:::compareDistributions(ITHIM.baseline, ITHIM.scenario, type = "WalkingTime")
+p + theme_bw() + theme(axis.text.x = element_text(angle = 90, hjust = 1)) + xlim(1,1e3) + scale_x_continuous(trans='log10') + xlab("Walking Time (min/week)")
+@
+<<results2, echo = FALSE, eval = TRUE, results = "hide", warning = FALSE, message = FALSE, fig.height = 3>>=
+p <- ITHIM:::compareDistributions(ITHIM.baseline, ITHIM.scenario, type = "CyclingTime")
+p + theme_bw() + theme(axis.text.x = element_text(angle = 90, hjust = 1)) + xlim(1,1e2) + scale_x_continuous(trans='log10') + xlab("Cycling Time (min/week)")
+@
+\caption{Distributions of walking and cycling transport time for
+  baseline and scenario models, stratified by age and sex.  In this
+  example the scenario was created by doubling the overall walking and
+  cycling means.}
+\end{figure}
 
 \paragraph{Non-Travel-Related Physical Activity}
 
@@ -65,10 +64,14 @@ scenarios, $\mathbf{x}$ and $\mathbf{x}^\prime$. The proportional
 change in disease burden, $\delta$, may be approximated as follows,
 where $R$ is the risk function for total activity.
 
-%% \begin{equation}
-%% \delta = 1 - \af \approx \frac{{\displaystyle \sum_{i=1}^{n}} R(x_i)}{{\displaystyle \sum_{i=1}^{n}} R(x_i^\prime)}
-%% \end{equation}
+\begin{equation}
+X_{ij}^{\mathrm{non-travel}} \sim \logNormalMath\left(\mu_{ij}, \gamma \mu_{ij}\right)
+\end{equation}
 
+Within each age-sex class the non-travel-related exposure is modeled
+with a \logNormal{} distribution.  The age-sex specific mean ratios,
+$r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
+American Time Use Survey data \cite{ATUS}.
 
 \paragraph{Estimation of Disease Burden}
 
@@ -117,20 +120,19 @@ comparative risk assessment against the baseline US numbers. We then
 examined the sensitivity of disease burden estimates to input
 parameters including the active travel time and non-travel activity.
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig1}}
-    \caption{}\label{fig1}
-\end{figure}
+% \begin{figure}[t]
+%   \centerline{\includegraphics[width=\textwidth]{./figures/fig1}}
+%     \caption{}\label{fig1}
+% \end{figure}
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
-    \caption{}\label{fig2}
-\end{figure}
+% \begin{figure}[t]
+%   \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
+%     \caption{}\label{fig2}
+% \end{figure}
 
-\begin{sidewaysfigure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
-  \caption{Estimates for disease burden nationwide in terms of thousands of
-    DALYs for each of the six diseases included in the model.
-  }\label{fig3}
-\end{sidewaysfigure}
-
+% \begin{sidewaysfigure}[t]
+%   \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
+%   \caption{Estimates for disease burden nationwide in terms of thousands of
+%     DALYs for each of the six diseases included in the model.
+%   }\label{fig3}
+% \end{sidewaysfigure}
