--- a/R/NHTS.Rmd
+++ b/R/NHTS.Rmd
@@ -1,4 +1,4 @@
-# U.S. National Household Travel Surevy
+ U.S. National Household Travel Surevy
 
 ```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
 options(repos='http://cran.rstudio.com/')
@@ -53,7 +53,8 @@ NHTS.person <- with(PERV2PUB,{
                                MSA = ifelse(MSASIZE %in% 1:5, TRUE, FALSE),
                                HHSTATE = as.character(HHSTATE),
                                # HHS = as.character(convertToHHS(as.character(HHSTATE))),
-                               MSA_ID = as.character(as.integer(HHC_MSA)), stringsAsFactors = FALSE)
+                               MSA_ID = as.character(as.integer(HHC_MSA)), stringsAsFactors = FALSE,
+                               HHFAMINC = as.factor(HHFAMINC))
 })
 
 ```
@@ -65,7 +66,7 @@ NHTS.person <- with(PERV2PUB,{
 ```{r TravelSurvey, eval = compute, fig.width = 10, echo = TRUE}
 
 person.df <- with(NHTS.person,{
-    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = MSA_ID)
+    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = MSA_ID, income = HHFAMINC)
     })
 
 trip.df <- with(NHTS.trips,{
@@ -75,14 +76,17 @@ trip.df <- with(NHTS.trips,{
 person.df <- subset(person.df,apply(person.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
 trip.df <- subset(trip.df,apply(trip.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
 
-NHTS.TravelSurvey <- new("TravelSurvey", person = person.df, trip = trip.df)
+#NHTS.TravelSurvey <- new("TravelSurvey", person = person.df, trip = trip.df)
 
-saveRDS(NHTS.TravelSurvey, file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
+#saveRDS(NHTS.TravelSurvey, file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
 ```
 
-```{r TravelSurvey, eval = TRUE, fig.width = fig.width, echo = FALSE}
-NHTS.ts <- readRDS(file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
-NHTS.df <- dplyr::left_join(NHTS.ts@person, NHTS.ts@trip, by = c("houseID","subjectID"))
+```{r TravelSurvey2, eval = TRUE, fig.width = fig.width, echo = FALSE}
+#NHTS.ts <- readRDS(file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
+
+#NHTS.df <- dplyr::left_join(NHTS.ts@person, NHTS.ts@trip, by = c("houseID","subjectID"))
+
+NHTS.df <- dplyr::left_join(person.df, trip.df, by = c("houseID","subjectID"))
 NHTS.df <- within(NHTS.df, {
     id <- paste0(houseID,"-",subjectID)
     duration <- ifelse(is.na(duration), 0, duration)
