--- a/R/NHTS.Rmd
+++ b/R/NHTS.Rmd
@@ -1,4 +1,4 @@
- U.S. National Household Travel Surevy
+# U.S. National Household Travel Surevy
 
 ```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
 options(repos='http://cran.rstudio.com/')
@@ -54,7 +54,9 @@ NHTS.person <- with(PERV2PUB,{
                                HHSTATE = as.character(HHSTATE),
                                # HHS = as.character(convertToHHS(as.character(HHSTATE))),
                                MSA_ID = as.character(as.integer(HHC_MSA)), stringsAsFactors = FALSE,
-                               HHFAMINC = as.factor(HHFAMINC))
+                               HHFAMINC = as.factor(HHFAMINC),
+                               NWALKTRP = as.numeric(NWALKTRP),
+                               NBIKETRP = as.numeric(NBIKETRP))
 })
 
 ```
@@ -66,7 +68,7 @@ NHTS.person <- with(PERV2PUB,{
 ```{r TravelSurvey, eval = compute, fig.width = 10, echo = TRUE}
 
 person.df <- with(NHTS.person,{
-    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = MSA_ID, income = HHFAMINC)
+    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = MSA_ID, income = HHFAMINC, nwalktrp = NWALKTRP, nbiketrp = NBIKETRP)
     })
 
 trip.df <- with(NHTS.trips,{
