--- a/methodsPaper/lib/abstract.Rnw
+++ b/methodsPaper/lib/abstract.Rnw
@@ -1,11 +1,11 @@
 Comparative risk assessments to quantify the health potential
-of active transportation, e.g., walking and cycling, have been
+of active transportation (e.g., walking and cycling) have been
 performed in the United States on a limited basis. Current
 methodologies, which rely on extensive data collection and user
 expertise, have estimated health benefits for select metropolitan
-areas under a few alternative scenarios. These analyses have largely
+areas under a few alternative scenarios. Such analyses have
 been conducted using the Integrated Transport Health Impacts Model
-(ITHIM) which was developed in the UK and has been adapted for use in
+(ITHIM), which was developed in the UK and has been adapted for use in
 the US, primarily California. Here we present an implementation of the
 active transportation component of ITHIM to model the health impacts
 of modified active transportation levels. Using the newly developed
@@ -15,6 +15,6 @@ adjusted life years over a wide range of scenarios.  The R package
 implemention of ITHIM's physical activity component provides a robust
 environment for exploring the relationship between active
 transportation and positive health outcomes.  A web-based
-user-interface is available for users who want a first estimate for
+user-interface based on the package is being developed for users who want a first estimate for
 the impact active transportation has on their
 state/region.
